# ner_example

./: README.md  main.py  pyproject.toml  requirements.txt
static/css/: styles.css
templates/: index.html
