[project]
name = "ner_example"
version = "1.0.0"
description = "An example of a solution to the problem of recognizing named entities"
authors = [
    {name = "Nizam Keramov", email = "keramov.nizam@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [ 
    "python",
    "flask",
    "ner",
    "natasha"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/Nkeramov/ner_example"
"Bug Tracker" = "https://github.com/Nkeramov/ner_example/issues"

[tool.mypy]
python_version = "3.11"
strict = true
# already included in strict = true, but left for clarity
# disallow_untyped_defs = true
# check_untyped_defs = true  
# warn_return_any = true
# warn_unused_configs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py311"
